-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
Qt Creator 3.0.0-rc1
-
None
-
a17aa85c4ae30d9a44fc2b10e919d94c3dfa3af3
The attached screenshot was taken while compiling Creator on a quad-core CPU.
It looks like process count for subdirs is not synchronized.
| For Gerrit Dashboard: QTCREATORBUG-10846 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 75879,7 | implement job server | master | qt-labs/jom | Status: MERGED | +2 | 0 |