implement job server

Instead of trying to block recursive jom calls, use a job server
similar to what GNU make provides.

Task-number: QTCREATORBUG-10846
Change-Id: I0e17bb3a4e22e911da58f90e1bebc20aa5e6c75a
Reviewed-by: Oliver Wolff <oliver.wolff@theqtcompany.com>